--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
   <canvas id="gameCanvas" width="800" height="600"></canvas>
   <script src="game.js"></script>
+  <!-- <button id="toggleSound">🔊</button> -->
 </body>
 </html>
