--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <canvas id="gameCanvas" width="800" height="600"></canvas>
+  <button id="toggleSound">🔊</button>
   <script src="game.js"></script>
-  <!-- <button id="toggleSound">🔊</button> -->
 </body>
 </html>
